syntax = "proto3";

option go_package="/protos";

service Product {
  rpc GetProduct(ProductRequest) returns (ProductResponse);
}

message ProductRequest {
  string id = 1;
}

message ProductResponse {
  string id = 1;
  string name = 2;
  string description = 3;
}